--- a/.github/workflows/static.yml
+++ b/.github/workflows/static.yml
@@ -1,32 +1,14 @@
-# Simple workflow for deploying static content to GitHub Pages
-name: Deploy static content to Pages
+name: test-oidc
 
 on:
-  # Runs on pushes targeting the default branch
-  push:
-    branches: ["main"]
-
-  # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
 
-# Sets permissions of the GITHUB_TOKEN to allow deployment to GitHub Pages
 permissions:
-  contents: read
-  pages: write
   id-token: write
-
-# Allow only one concurrent deployment, skipping runs queued between the run in-progress and latest queued.
-# However, do NOT cancel in-progress runs as we want to allow these production deployments to complete.
-concurrency:
-  group: "pages"
-  cancel-in-progress: false
+  contents: read
 
 jobs:
-  # Single deploy job since we're just deploying
-  deploy:
-    environment:
-      name: github-pages
-      url: ${{ steps.deployment.outputs.page_url }}
+  get-blob:
     runs-on: ubuntu-latest
     steps:
       - name: Azure login with managed identity via OIDC
@@ -35,6 +17,9 @@ jobs:
           client-id: 87eb4352-8747-4079-9a13-39b60b6f6360
           tenant-id: fdd066e1-ee37-49bc-b08f-d0e152119b04
           subscription-id: 8d17ab28-a79a-43da-9862-b674b4a02687
+
+      - name: Who am I
+        run: az account show
 
       - name: List containers
         run: |
