--- a/.github/workflows/static.yml
+++ b/.github/workflows/static.yml
@@ -30,7 +30,7 @@ jobs:
       - name: storage blob download
         run: |
             az storage blob download \
-              --account-name "$STORAGE_ACCOUNT_NAME" \
+              --account-name "/subscriptions/8d17ab28-a79a-43da-9862-b674b4a02687/resourceGroups/iam-azure-labs/providers/Microsoft.Storage/storageAccounts/iamazurelab3206a7f96" \
               --container-name flag \
               --name flag.txt \
               --file  flag.txt \
