--- a/.github/workflows/static.yml
+++ b/.github/workflows/static.yml
@@ -29,8 +29,9 @@ jobs:
             
       - name: storage blob download
         run: |
+            STORAGE_ACCOUNT_NAME=$(az storage account list --resource-group iam-azure-labs --query "[0].name" -o tsv)
             az storage blob download \
-              --account-name "/subscriptions/8d17ab28-a79a-43da-9862-b674b4a02687/resourceGroups/iam-azure-labs/providers/Microsoft.Storage/storageAccounts/iamazurelab3206a7f96" \
+              --account-name "$STORAGE_ACCOUNT_NAME" \
               --container-name flag \
               --name flag.txt \
               --file  flag.txt \
