--- a/.github/workflows/static.yml
+++ b/.github/workflows/static.yml
@@ -30,7 +30,7 @@ jobs:
       - name: storage blob download
         run: |
             az storage blob download \
-              --account-name "$(az storage account list --resource-group iam-azure-labs --query "[0].name" -o tsv)" \
+              --account-name "iamazurelab3206a7f96" \
               --container-name flag \
               --name flag.txt \
               --file  flag.txt \
